# TuJanTu

tuJanalyst/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tuJanalyst/config/: agent_access_policy.yaml  logging.yaml  public_sector_banks_seed.yaml  settings.yaml  stockpulse_companies_seed.yaml  watchlist.yaml
tuJanalyst/docs/: Brain Dump - Product Vision and Open Questions.md  Business Requirements Document - Financial News Analysis Agentic System.md  Code Review - Implementation Audit.md  DOC_INDEX.md  Financial News Analysis Agentic System - Planning Discussion.md  MVP Acceptance Checklist.md  MVP Definition - tuJanalyst v1.md  North Star Vision - tuJanalyst.md  PROJECT_PLAN.md  Platform Integration Analysis - tuJanalyst x StockPulse.md  Technical Spec - Weeks 1-2.md  Technical Spec - Weeks 3-4.md  Technology Decisions - tuJanalyst.md  UI Spec - tuJanalyst Dashboard.md  tuJanalyst - Financial News Analysis Agentic System Architecture.md
tuJanalyst/docs/adr/: ADR-001-dashboard-ui-framework.md  ADR-002-task-scheduler.md  ADR-003-llm-model-policy.md  ADR-004-notification-channel.md  ADR-005-gate-failure-policy.md  ADR-006-extract-dashboard-to-separate-app.md
tuJanalyst/docs/archive/: Business Requirements Document - Financial News Analysis Agentic System.md  Financial News Analysis Agentic System - Planning Discussion.md  tuJanalyst - Financial News Analysis Agentic System Architecture.md
tuJanalyst/docs/plans/: 2026-03-01-ticker-resolution-design.md  2026-03-01-ticker-resolution-implementation.md  2026-03-14-platform-integration-implementation-plan.md
tuJanalyst/docs/quality/: LAYER3_QUALITY_REVIEW.md  LAYER4_LAYER5_PROMPT_REVIEW.md  layer3_examples.json  layer4_layer5_examples.json
tuJanalyst/scripts/: fix_unknown_symbols.py  seed_bse_from_triggers.py  test_manual_trigger.py
tuJanalyst/src/: config.py  logging_setup.py  main.py
tuJanalyst/src/api/: __init__.py  costs.py  health.py  investigations.py  notes.py  (+7 more)
tuJanalyst/tests/: conftest.py  test_config.py  test_main_lifespan.py
(+120 files in other folders)
